# germeval24

./: .gitignore  LICENSE  README.md  pyproject.toml
data/germeval24/: germeval-development-test.jsonl  germeval-development-train.jsonl
germeval/: dataset.py  task.py
germeval/classification/: binary.py  multiclass.py  utils.py
notebooks/: data_analysis.ipynb
params/: m1.yaml  m2.yaml  m3.yaml  m4.yaml  m5.yaml  m6.yaml  m7.yaml
scripts/: prediction.py  run_training.py
train_scripts/: m1.sh  m2.sh  m3.sh  m4.sh  m5.sh  m6.sh  m7.sh
