[tool.poetry]
name = "germeval"
version = "0.1.0"
description = "Source code for the GermEval 2024 competition"
authors = ["Falk Maoro <falk.maoro@unibw.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
transformers = "^4.35.2"
datasets = "^2.15.0"
evaluate = "^0.4.1"
pydantic = "^2.5.2"
torch = "^2.1.1"
accelerate = "^0.31.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.4.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "C",
    "E",
    "F",
    "W",
    "N",
    "ANN",
    "S",
    "A",
    "T20",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
 ignore = [
    "C901",
    "E501", 
    "E741", 
    "W605", 
    "PLR0915", 
    "ANN101", 
    "S301", 
    "ANN401",
    "ANN003",
    "TID252",
]
src = ["germeval", "scripts"]
target-version = "py39"
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

skip-magic-trailing-comma = false
  
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = false
ignore_missing_imports = true
files = "germeval,scripts"
check_untyped_defs = true

[tool.pyright]
include = ["germeval", "scripts"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
]
pythonVersion = "3.9"
executionEnvironments = [
    { root = "src" }
]
reportMissingTypeStubs = false
reportMissingImports = true